changed granules for future improvements

--- a/src/hqmpd.cabal
+++ b/src/hqmpd.cabal
@@ -29,6 +29,7 @@ Executable hqmp3
                   , binary
                   , MaybeT
                   , huffmandecoder
+                  , parallel
    Main-Is:         Test.hs
 --    hs-source-dirs:  example, .
    Other-Modules:   Codecs.Mp3.Decoder
@@ -44,6 +45,6 @@ Executable hqmp3
    c-sources:       Codecs/Mp3/c_synth.c,
                     Codecs/Mp3/c_imdct.c
    cc-options:      -O2
-   ghc-options:     -O2
+   ghc-options:     -O2 -prof -threaded
 
 
