--- a/src/huffman/huffman.cabal
+++ b/src/huffman/huffman.cabal
@@ -26,4 +26,4 @@ Library
 -- Other-modules: 
                   
  hs-source-dirs:  .
- ghc-options:     -O2
+ ghc-options:     -O2 -prof -threaded -auto-all
