Joint Stereo songs working (not processed properly though)

--- a/src/hqmpd.cabal
+++ b/src/hqmpd.cabal
@@ -45,4 +45,4 @@ Executable hqmp3
    c-sources:       Codecs/Mp3/c_synth.c,
                     Codecs/Mp3/c_imdct.c
    cc-options:      -O2 -std=c99
-   ghc-options:     -O2 -prof -threaded -auto-all
+   ghc-options:     -O2 -threaded -funbox-strict-fields
